# evisearch-py

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  index.json  pyproject.toml  render.yaml  requirements.txt  start.sh
bench/: benchmark.py  quickcharts.py
data/: index.json
data/docs/: doc1.txt  doc2.txt
evisearch/: analyzer.py  api.py  celery_app.py  cli.py  highlight.py  indexer.py  searcher.py  storage.py  tasks.py
evisearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evisearch_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analyzer.py  test_highlight.py  test_indexer.py  test_phrase.py  test_ranker.py  test_search_boolean.py  test_storage.py
